# confidence

./: .gitignore  CLAUDE.md  CONTRIBUTING.rst  HISTORY.rst  Makefile  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: confidence.yml  python-publish.yml
spotify_confidence/: __init__.py
spotify_confidence/analysis/: confidence_utils.py
spotify_confidence/analysis/bayesian/: bayesian_base.py  bayesian_models.py
spotify_confidence/analysis/frequentist/confidence_computers/: confidence_computer.py
spotify_confidence/samplesize/: sample_size_calculator.py
tests/bayesian/: test_betabinomial.py
tests/frequentist/: test_bounds.py  test_chisquared.py  test_experiment.py  test_ttest.py  test_ztest.py  test_ztest_linreg.py
