[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "spotify-confidence"
version = "4.0.0"
description = "Package for calculating and visualising confidence intervals, e.g. for A/B test analysis."
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Per Sillren", email = "pers@spotify.com"}]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.9.0",
    "pandas>=1.4.0",
    "statsmodels>=0.13.5",
    "chartify>=5.0.0",
    "ipywidgets>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "build",
    "twine",
    "black>=23.7.0",
    "flake8>=6.0.0",
    "tox>=4.0.0",
    "tox-uv>=1.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.2",
    "coverage>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/spotify/confidence"
"Bug Tracker" = "https://github.com/spotify/confidence/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["spotify_confidence*"]
namespaces = false

[tool.black]
line-length = 119
target-version = ["py39", "py310", "py311", "py312"]

[tool.pytest.ini_options]
addopts = "-v -n auto --cov=spotify_confidence --cov-report=html --cov-report=xml --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
source = ["spotify_confidence"]

[tool.coverage.report]
show_missing = true
